v20.10/de/_sources/interfaces.rst.txt
Schnittstellen

Es stehen vier Schnittstellen zur Konfiguration und Datenübertragung
des

rc_visard

 zur Verfügung:

GigE Vision 2.0/GenICam-Schnittstelle\:(Abschnitt \ref{gigevision
:sect-genicam})  Konfiguration bild- und kamerabezogener
Einstellungen.

REST-API-Schnittstelle\:(Abschnitt \ref{rest_api:sect-rest-api})
Programmierschnittstelle zur Konfiguration des rc_visard, zur Abfrage
von Statusinformationen, zum Anfordern von Datenströmen, usw.

rc_dynamics-Schnittstelle\:(Abschnitt \ref{rc_dynamics:sect-rc-
dynamics-interface})  Echtzeit-Datenströme, die Zustandsschätzungen
samt Posen-, Geschwindigkeits- und anderen Daten enthalten, werden
über die rc_dynamics-Schnittstelle bereitgestellt. Sie sendet
ProtoBuf-kodierte Nachrichten über UDP.

Ethernet KRL Schnittstelle (EKI)\:(Abschnitt \ref{eki:sect-eki})  API
zum Konfigurieren des rc_visard und Ausführen von Service-Anfrage von
KUKA KSS Robotern aus.

Zeitsynchronisation\:(Abschnitt \ref{time_sync:sect-time-sync})
Zeitsynchronisation zwischen dem rc_visard und dem Anwendungs-PC.

